[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/miscs/Disease.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[node name="Disease" type="Node2D"]
script = ExtResource( 1 )

[node name="Contagion" type="Area2D" parent="."]
input_pickable = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Contagion"]
shape = SubResource( 1 )

[node name="Incubation" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Symptomatic" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="Contagion" to="." method="_on_Contagion_area_entered"]
[connection signal="timeout" from="Incubation" to="." method="_on_Incubation_timeout"]
[connection signal="timeout" from="Symptomatic" to="." method="_on_Symptomatic_timeout"]
